Update method to start Tor Proxy
Modified the startproxy() method in ProxyConfigurator.java to increase efficiency. Instead of using Runtime to execute a system command,
now using ProcessBuilder to start the Tor Proxy. Added log for the command's exit code and ensured the process is destroyed after completion to free up system resources. These changes are intended to improve the reliability and performance of the proxy start process.